--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,5 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha07"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
 }
