--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,12 @@ version: 2
 jobs:
   build:
     working_directory: ~/code
-    docker:
-      image: circleci/openjdk:11.0.3-jdk-stretch
     environment:
       # Configure the JVM and Gradle to avoid OOM errors
-      _JAVA_OPTIONS: "-Xmx3g"
-      GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2"
+      _JAVA_OPTIONS: -Xmx4G
+      docker: # run the steps with Docker
+        - image: circleci/openjdk:11.0.3-jdk-stretch
+        - image: circleci/android:api-25-alpha
     steps:
       - checkout
       - run: echo "Checking out gradle cache..."
