--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
 }
 
 dependencies {
+    def room_version = "2.3.0"
     def lifecycle_version = "2.3.1"
     def hilt_version = "2.38.1"
 
@@ -74,4 +75,7 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha07"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
     implementation "com.google.accompanist:accompanist-permissions:0.17.0"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
