--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
     implementation "com.google.accompanist:accompanist-permissions:0.17.0"
     implementation "com.github.skydoves:landscapist-glide:1.3.7"
+    implementation 'com.github.vestrel00:contacts-android:0.1.7'
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
